Made Serialisation use non-java 8 things